uploaded rest of working code including basic thresholding and loops

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -119,6 +119,7 @@
     "import matplotlib.pyplot as plt \n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from statistics import mean\n",
     "\n",
     "from pathlib import Path\n",
     "import os \n",
@@ -136,7 +137,8 @@
    "id": "f6914399-8f1f-4cda-8bb1-8ce32d2041b2",
    "metadata": {},
    "source": [
-    "Loading the images. Making "
+    "Loading the images. Making them the correct dimension and making a max projection image\n",
+    "A max projection image is just max of the numpy array"
    ]
   },
   {
@@ -148,8 +150,120 @@
    "source": [
     "path = ('/Users/miramota/Desktop/IMGS/01142022_Injury5.czi')\n",
     "img = czifile.imread(path)\n",
-    "img = img[0,0,0,:,:,:,0]"
+    "img = img[0,0,0,:,:,:,0]\n",
+    "maximg = img.max(axis = 0)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6b24b5f",
+   "metadata": {},
+   "source": [
+    "Lets look at different methods of thresholding and see what would work best"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef9d60b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Thresh is a value which was automatically generated based on the values from the max projection.\n",
+    "\n",
+    "thresh = filters.threshold_otsu(maximg)\n",
+    "\n",
+    "#Here we are saying that anything in the image above the threshold value is fluorescence we want\n",
+    "#However this is a binary mask meaning we get boolean values \n",
+    "\n",
+    "binary_mask = maximg >= thresh\n",
+    "\n",
+    "#Now if we want to see what we end up after applying this threshold method we can plot it using \n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "plt.imshow(binary_mask, cmap='gray')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1162d59",
+   "metadata": {},
+   "source": [
+    "Now we wanna do this presumably for multiple images and when imaging there are often 10s of images per variable and sometimes multiple variables. So how can you make the computer do it for you with little work on your end?\n",
+    "\n",
+    "we first need to go through the folder, read the files, make them into numpy arrays and then store these values to be able to access them later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "217e7b2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "injury = []\n",
+    "no_injury = []\n",
+    "noinjury_filepath = []\n",
+    "injury_filepath = []\n",
+    "\n",
+    "for dir, subdir, files in os.walk(folder_path):\n",
+    "    # print(files)\n",
+    "    for x in files:\n",
+    "            if 'NoInjury' in x:\n",
+    "                noinjury_filepath.append(os.path.join(dir,x))\n",
+    "                no_injury.append(x)\n",
+    "            else:\n",
+    "                injury_filepath.append(os.path.join(dir,x))\n",
+    "                injury.append(x)\n",
+    "            if '.DS_Store' in x:\n",
+    "                continue\n",
+    "\n",
+    "imgs_df = pd.DataFrame(list(zip(noinjury_filepath, no_injury)),\n",
+    "                       columns = ['No Injury Filepath', 'Filename'])  \n",
+    "\n",
+    "\n",
+    "noinjury_values= []\n",
+    "noinjury_max= []\n",
+    "injury_values= []\n",
+    "injury_max = []\n",
+    "noinjury_otsu = []\n",
+    "injury_otsu =[]\n",
+    "\n",
+    "for i in noinjury_filepath:\n",
+    "    value = czifile.imread(i)\n",
+    "    value = value[0,0,0,:,:,:,0]\n",
+    "    noinjury_values.append(value)\n",
+    "    noi_max = np.max(value, axis = 0)\n",
+    "    noinjury_max.append(noi_max)\n",
+    "    for noi in noinjury_max:\n",
+    "        threshold = filters.threshold_otsu(noi)\n",
+    "        noinjury_otsu.append(threshold)\n",
+    "        avgmax = mean(noinjury_otsu)\n",
+    "        return avgmax\n",
+    "\n",
+    "for z in injury_filepath[1:]:\n",
+    "    num = czifile.imread(z)\n",
+    "    num = num[0,0,0,:,:,:,0]\n",
+    "    injury_values.append(num)\n",
+    "    i_max = np.max(num, axis = 0)\n",
+    "    injury_max.append(i_max)\n",
+    "    \n",
+    "\n",
+    "\n",
+    "imgs_df['No Injury Values'], imgs_df['No Injury Max Proj'], imgs_df['Injury Values'], imgs_df['Injury Max Proj'] \\ \n",
+    "= \\ [noinjury_values, noinjury_max, injury_values, injury_max]\n",
+    "\n",
+    "# Find the mean automatic threshold value for all control images \n",
+    "\n",
+    "mean = mean(noinjury_otsu)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3c439ec",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
