adding code for aisimage package that works for coles images

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -263,7 +263,20 @@
    "cell_type": "markdown",
    "id": "c3c439ec",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n",
+    "from aicsimageio import AICSImage\n",
+    "# aicsimageio[czi]\n",
+    "\n",
+    "path = ('/Users/miramota/Desktop/IMGS/01142022_NoInjury9.czi')\n",
+    "czi_img = AICSImage(pathnoi)\n",
+    "\n",
+    "c = czi_img.get_image_data('ZYX', T= 0, C=0)\n",
+    "\n",
+    "blur = skimage.filters.gaussian(czi_array, sigma = 1.0)\n",
+    "\n",
+    "meanvalue = i[binaryi].mean()"
+   ]
   }
  ],
  "metadata": {
