adding the function to get values from image

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -126,6 +126,8 @@
     "import czifile \n",
     "from skimage import filters\n",
     "\n",
+    "from scipy.stats import f_oneway\n",
+    "\n",
     "# This is a special \"magic\" command that can be used in Jupyter Notebooks.\n",
     "# It ensures that Matplotlib shows the plot below each cell (you won't see\n",
     "# a plot otherwise).\n",
@@ -152,6 +154,34 @@
     "img = czifile.imread(path)\n",
     "img = img[0,0,0,:,:,:,0]\n",
     "maximg = img.max(axis = 0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "207830ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This is going to use the same image but load it using two different packages. \n",
+    "from aicsimageio import AICSImage\n",
+    "czi_img = AICSImage(path)\n",
+    "#cuts out all the information from the image and only gives you the array in 5dimensions \n",
+    "czi_array = czi_img.data()\n",
+    "#check the shape should be 5d array \n",
+    "czi_array.shape()\n",
+    "# .dims tells you what each dimension is \n",
+    "czi_array.dims()\n",
+    "#Check pixel sizes if you need for scaling etc\n",
+    "czi_array.physical_pixel_sizes.X, Y, Z \n",
+    "\n",
+    "#Since .data returns a 5d array and your image may not need all the dimensions. Our example images are only one channel, one time frame we can get rid of the rest of the dimensions since they dont offer much value\n",
+    "#can rename over the original array to make it easier\n",
+    "czi_array = czi_array.get_image_data('ZYX', T=0, C=0)\n",
+    "# ZYX is the order in which the dimensions will be placed. because there is 1 time point =0 will get rid of it, same with channel\n",
+    "\n",
+    "#creating a max projection image is the same as with any numpy array \n",
+    "czi_max = czi_array.max(axis =0)"
    ]
   },
   {
@@ -219,8 +249,9 @@
     "            if '.DS_Store' in x:\n",
     "                continue\n",
     "\n",
-    "imgs_df = pd.DataFrame(list(zip(noinjury_filepath, no_injury)),\n",
-    "                       columns = ['No Injury Filepath', 'Filename'])  \n",
+    "df1 = pd.DataFrame(list(zip(noinjury_filepath, no_injury)),\n",
+    "                       columns = ['Filepath', 'Filename'])  \n",
+    "df2 = pd.DataFrame(list(zip(injury_filepath, injury)), columns = ['Filepath', 'Filename'])\n",
     "\n",
     "\n",
     "noinjury_values= []\n",
@@ -264,8 +295,17 @@
    "id": "c3c439ec",
    "metadata": {},
    "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b645f9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "from aicsimageio import AICSImage\n",
     "# aicsimageio[czi]\n",
     "\n",
     "path = ('/Users/miramota/Desktop/IMGS/01142022_NoInjury9.czi')\n",
@@ -276,6 +316,70 @@
     "blur = skimage.filters.gaussian(czi_array, sigma = 1.0)\n",
     "\n",
     "meanvalue = i[binaryi].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "beb95a1a",
+   "metadata": {},
+   "source": [
+    "Statistics "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77c2a90a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group1= (,)\n",
+    "group2= (,)\n",
+    "group3= (,)\n",
+    "group4= (,)\n",
+    "\n",
+    "f_oneway(group1, group2, group3, group4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32ddf087",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_metrics(path):\n",
+    "    czi_img = AICSImage(path)\n",
+    "    height = czi_img.dims.Y\n",
+    "    width = czi_img.dims.X\n",
+    "    area = height * width \n",
+    "    czi_array = czi_img.data\n",
+    "    czi_array = czi_array[0,0,:,:,:,]\n",
+    "    maximg = czi_array.max(axis = 0)\n",
+    "    \n",
+    "    thresh = filters.threshold_otsu(maximg)\n",
+    "    binary_mask = maximg >= thresh\n",
+    "    \n",
+    "    #fig, ax = plt.subplots()\n",
+    "    #plt.imshow(binary_mask, cmap='gray')\n",
+    "    #plt.show()\n",
+    "    \n",
+    "    mean_value = maximg[binary_mask].mean()\n",
+    "    count = np.sum(binary_mask)\n",
+    "    percentarea = (count / area) * 100\n",
+    "    \n",
+    "    return mean_value , percentarea"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40d958e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#path = '~/Desktop/etc/etc/' \n",
+    "calculate_metrics(path)"
    ]
   }
  ],
