updated the definition code and the for loops

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -120,13 +120,12 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from statistics import mean\n",
-    "\n",
     "from pathlib import Path\n",
-    "import os \n",
+    "# import os \n",
     "import czifile \n",
     "from skimage import filters\n",
-    "\n",
     "from scipy.stats import f_oneway\n",
+    "from aicsimageio import AICSImage\n",
     "\n",
     "# This is a special \"magic\" command that can be used in Jupyter Notebooks.\n",
     "# It ensures that Matplotlib shows the plot below each cell (you won't see\n",
@@ -153,7 +152,7 @@
     "path = ('/Users/miramota/Desktop/IMGS/01142022_Injury5.czi')\n",
     "img = czifile.imread(path)\n",
     "img = img[0,0,0,:,:,:,0]\n",
-    "maximg = img.max(axis = 0)\n"
+    "maximg = img.max(axis = 0)"
    ]
   },
   {
@@ -164,7 +163,7 @@
    "outputs": [],
    "source": [
     "#This is going to use the same image but load it using two different packages. \n",
-    "from aicsimageio import AICSImage\n",
+    "\n",
     "czi_img = AICSImage(path)\n",
     "#cuts out all the information from the image and only gives you the array in 5dimensions \n",
     "czi_array = czi_img.data()\n",
@@ -223,6 +222,89 @@
     "Now we wanna do this presumably for multiple images and when imaging there are often 10s of images per variable and sometimes multiple variables. So how can you make the computer do it for you with little work on your end?\n",
     "\n",
     "we first need to go through the folder, read the files, make them into numpy arrays and then store these values to be able to access them later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32ddf087",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_threshold(path):\n",
+    "    czi_img = AICSImage(path)\n",
+    "    czi_array = czi_img.data\n",
+    "    czi_array = czi_array[0,0,:,:,:,]\n",
+    "    maximg = czi_array.max(axis = 0)\n",
+    "    thresh = filters.threshold_otsu(maximg)\n",
+    "    return thresh \n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d3c2fbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_injury= []\n",
+    "for file in folder_path.iterdir():\n",
+    "    if 'NoInjury' in file.stem:\n",
+    "        print(file)\n",
+    "        file = file.absolute()\n",
+    "        file = file.as_posix()\n",
+    "        threshold = calculate_threshold(file)\n",
+    "        no_injury.append(threshold)\n",
+    "        mean = statistics.mean(no_injury)\n",
+    "    print(mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce45a9ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = '/Users/miramota/Desktop/IMGS/01142022_NoInjury9.czi\n",
+    "czi_img = AICSImage(z)\n",
+    "czi_array = czi_img.data\n",
+    "czi_array = czi_array[0,0,:,:,:,]\n",
+    "maxz = czi_array.max(axis = 0)\n",
+    "\n",
+    "def calculate_metrics(maximg ,thresh):\n",
+    "   height = maximg.shape[0]\n",
+    "   width = maximg.shape[1]\n",
+    "   area = height * width \n",
+    "   binary_mask = maximg >= thresh\n",
+    "    #fig, ax = plt.subplots()\n",
+    "    #plt.imshow(binary_mask, cmap='gray')\n",
+    "    #plt.show()\n",
+    "   mean_value = maximg[binary_mask].mean()\n",
+    "   count = np.sum(binary_mask)\n",
+    "   percentarea = (count / area) * 100\n",
+    "   metric = {'Mean Value': [mean_value], 'Percent Area': [percentarea]}\n",
+    "   return metric\n",
+    "\n",
+    "calc = calculate_metrics(maxz, 19) \n",
+    "print(calc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "699654c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "        print(file)\n",
+    "        file = file.absolute()\n",
+    "        file = file.as_posix()\n",
+    "        threshold = calculate_threshold(file)\n",
+    "        no_injury.append(threshold)\n",
+    "        mean = statistics.mean(no_injury)\n",
+    "    print(mean)"
    ]
   },
   {
@@ -292,34 +374,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3c439ec",
-   "metadata": {},
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b645f9e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# aicsimageio[czi]\n",
-    "\n",
-    "path = ('/Users/miramota/Desktop/IMGS/01142022_NoInjury9.czi')\n",
-    "czi_img = AICSImage(pathnoi)\n",
-    "\n",
-    "c = czi_img.get_image_data('ZYX', T= 0, C=0)\n",
-    "\n",
-    "blur = skimage.filters.gaussian(czi_array, sigma = 1.0)\n",
-    "\n",
-    "meanvalue = i[binaryi].mean()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "beb95a1a",
    "metadata": {},
    "source": [
@@ -339,36 +393,6 @@
     "group4= (,)\n",
     "\n",
     "f_oneway(group1, group2, group3, group4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32ddf087",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculate_metrics(path):\n",
-    "    czi_img = AICSImage(path)\n",
-    "    height = czi_img.dims.Y\n",
-    "    width = czi_img.dims.X\n",
-    "    area = height * width \n",
-    "    czi_array = czi_img.data\n",
-    "    czi_array = czi_array[0,0,:,:,:,]\n",
-    "    maximg = czi_array.max(axis = 0)\n",
-    "    \n",
-    "    thresh = filters.threshold_otsu(maximg)\n",
-    "    binary_mask = maximg >= thresh\n",
-    "    \n",
-    "    #fig, ax = plt.subplots()\n",
-    "    #plt.imshow(binary_mask, cmap='gray')\n",
-    "    #plt.show()\n",
-    "    \n",
-    "    mean_value = maximg[binary_mask].mean()\n",
-    "    count = np.sum(binary_mask)\n",
-    "    percentarea = (count / area) * 100\n",
-    "    \n",
-    "    return mean_value , percentarea"
    ]
   },
   {
