--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -250,14 +250,17 @@
    "source": [
     "no_injury= []\n",
     "for file in folder_path.iterdir():\n",
+    "    #either seperate RNAi files or add more conditions to seperate them for mean thresh calculation\n",
+    "    #change folder path to go to no injury and no injury RNAi seperately\n",
     "    if 'NoInjury' in file.stem:\n",
-    "        print(file)\n",
+    "        #print(file)\n",
     "        file = file.absolute()\n",
     "        file = file.as_posix()\n",
     "        threshold = calculate_threshold(file)\n",
     "        no_injury.append(threshold)\n",
     "        mean = statistics.mean(no_injury)\n",
-    "    print(mean)"
+    "    print(mean)\n",
+    "    "
    ]
   },
   {
@@ -267,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z = '/Users/miramota/Desktop/IMGS/01142022_NoInjury9.czi\n",
+    "z = '/Users/miramota/Desktop/IMGS/01142022_NoInjury9.czi'\n",
     "czi_img = AICSImage(z)\n",
     "czi_array = czi_img.data\n",
     "czi_array = czi_array[0,0,:,:,:,]\n",
@@ -286,6 +289,8 @@
     "   percentarea = (count / area) * 100\n",
     "   metric = {'Mean Value': [mean_value], 'Percent Area': [percentarea]}\n",
     "   return metric\n",
+    "\n",
+    "#Applying the function\n",
     "\n",
     "calc = calculate_metrics(maxz, 19) \n",
     "print(calc)"
@@ -314,62 +319,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "injury = []\n",
-    "no_injury = []\n",
-    "noinjury_filepath = []\n",
-    "injury_filepath = []\n",
+    "file_df = pd.DataFrame.from_dict({'Filename':[str(file.stem)], 'Filepath':[str(file)]})\n",
+    "df = pd.DataFrame.from_dict(metric, orient = 'columns')\n",
     "\n",
-    "for dir, subdir, files in os.walk(folder_path):\n",
-    "    # print(files)\n",
-    "    for x in files:\n",
-    "            if 'NoInjury' in x:\n",
-    "                noinjury_filepath.append(os.path.join(dir,x))\n",
-    "                no_injury.append(x)\n",
-    "            else:\n",
-    "                injury_filepath.append(os.path.join(dir,x))\n",
-    "                injury.append(x)\n",
-    "            if '.DS_Store' in x:\n",
-    "                continue\n",
-    "\n",
-    "df1 = pd.DataFrame(list(zip(noinjury_filepath, no_injury)),\n",
-    "                       columns = ['Filepath', 'Filename'])  \n",
-    "df2 = pd.DataFrame(list(zip(injury_filepath, injury)), columns = ['Filepath', 'Filename'])\n",
-    "\n",
-    "\n",
-    "noinjury_values= []\n",
-    "noinjury_max= []\n",
-    "injury_values= []\n",
-    "injury_max = []\n",
-    "noinjury_otsu = []\n",
-    "injury_otsu =[]\n",
-    "\n",
-    "for i in noinjury_filepath:\n",
-    "    value = czifile.imread(i)\n",
-    "    value = value[0,0,0,:,:,:,0]\n",
-    "    noinjury_values.append(value)\n",
-    "    noi_max = np.max(value, axis = 0)\n",
-    "    noinjury_max.append(noi_max)\n",
-    "    for noi in noinjury_max:\n",
-    "        threshold = filters.threshold_otsu(noi)\n",
-    "        noinjury_otsu.append(threshold)\n",
-    "        avgmax = mean(noinjury_otsu)\n",
-    "        return avgmax\n",
-    "\n",
-    "for z in injury_filepath[1:]:\n",
-    "    num = czifile.imread(z)\n",
-    "    num = num[0,0,0,:,:,:,0]\n",
-    "    injury_values.append(num)\n",
-    "    i_max = np.max(num, axis = 0)\n",
-    "    injury_max.append(i_max)\n",
-    "    \n",
-    "\n",
-    "\n",
-    "imgs_df['No Injury Values'], imgs_df['No Injury Max Proj'], imgs_df['Injury Values'], imgs_df['Injury Max Proj'] \\ \n",
-    "= \\ [noinjury_values, noinjury_max, injury_values, injury_max]\n",
-    "\n",
-    "# Find the mean automatic threshold value for all control images \n",
-    "\n",
-    "mean = mean(noinjury_otsu)\n"
+    "final_df = pd.concat([file_df, df], axis = 1)"
    ]
   },
   {
@@ -387,12 +340,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "group1= (,)\n",
-    "group2= (,)\n",
-    "group3= (,)\n",
-    "group4= (,)\n",
+    "#in each group add all the values of each conditon\n",
+    "Noinjury_means= (,)\n",
+    "Injruy_means= (,)\n",
+    "Noinjury_rnai_means= (,)\n",
+    "Noinjury_rnai_means= (,)\n",
     "\n",
-    "f_oneway(group1, group2, group3, group4)"
+    "f_oneway(Noinjury_means, Injruy_means, Noinjury_rnai_means, Noinjury_rnai_means)\n",
+    "\n",
+    "#gives f value and p value \n",
+    "\n",
+    "#graph this "
    ]
   },
   {
