--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -72,6 +72,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3517ef67-3724-4444-add3-43a61d00a7b4",
+   "metadata": {},
+   "source": [
+    "![image.png](attachment:d32cb6ff-7139-429d-b2df-0b265a4e5396.png)\n",
+    "\n",
+    "The goal of this experiment is to determine whether or not knocking down the NijA gene impacts the ability of glial cells to clear degenerating axons in the context of neural injury."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "87f7b2d4-3afd-4b87-987f-81a2a462e8ee",
    "metadata": {},
    "source": [
@@ -131,6 +141,23 @@
     "# It ensures that Matplotlib shows the plot below each cell (you won't see\n",
     "# a plot otherwise).\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f7cd461-4d8a-482f-9c8e-9faa9be12685",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Need to update open()\n",
+    "with open('data/TAR010a.h5', 'wb') as f:\n",
+    "    c = pycurl.Curl()\n",
+    "    #Need to Update website URL\n",
+    "    c.setopt(c.URL, 'https://hearingbrain.org/tmp/TAR010a.h5')\n",
+    "    c.setopt(c.WRITEDATA, f)\n",
+    "    c.perform()\n",
+    "    c.close()"
    ]
   },
   {
@@ -381,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
