Added notes from Tania

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -136,6 +136,7 @@
     "from skimage import filters\n",
     "from scipy.stats import f_oneway\n",
     "from aicsimageio import AICSImage\n",
+    "import pycurl\n",
     "\n",
     "# This is a special \"magic\" command that can be used in Jupyter Notebooks.\n",
     "# It ensures that Matplotlib shows the plot below each cell (you won't see\n",
@@ -147,7 +148,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1f7cd461-4d8a-482f-9c8e-9faa9be12685",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "#Need to update open()\n",
@@ -275,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "no_injury= []\n",
+    "no_injury_thresholds= []\n",
     "for file in folder_path.iterdir():\n",
     "    #either seperate RNAi files or add more conditions to seperate them for mean thresh calculation\n",
     "    #change folder path to go to no injury and no injury RNAi seperately\n",
@@ -284,7 +287,7 @@
     "        file = file.absolute()\n",
     "        file = file.as_posix()\n",
     "        threshold = calculate_threshold(file)\n",
-    "        no_injury.append(threshold)\n",
+    "        no_injury_thresholds.append(threshold)\n",
     "        mean = statistics.mean(no_injury)\n",
     "    print(mean)\n",
     "    "
@@ -353,6 +356,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "776363df-22f7-47f7-98c4-2cba5578e1aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1st, find mean threshold for NOI and NOI RNAi using calculate threshold function\n",
+    "NoI_thresh=[]\n",
+    "NoIRNAi_thresh=[]\n",
+    "for x in noinjury(): \n",
+    "    thresh=calculate_threshold(x) \n",
+    "    NoI_thresh.append(thresh)\n",
+    "    NoI_mean = statistics.mean(NoI_thresh)\n",
+    "    print(NoI_mean)\n",
+    "    \n",
+    "for y in noinjury_rnai(): \n",
+    "    thresh=calculate_threshold(y)\n",
+    "    NoIRNAi_thresh.append(thresh)\n",
+    "    NoIRNAi_mean = statistics.mean(NoIRNAi_thresh)\n",
+    "    print(NOI_mean)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "600ef1cf-9a36-47c9-b00b-d780ef6e599f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for x in files: \n",
+    "    get filename: save as string\n",
+    "    for filepath: save as string\n",
+    "    calculate_metrics(x) = values\n",
+    "    file = file.absolute()\n",
+    "    file = file.as_posis()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "beb95a1a",
    "metadata": {},
@@ -369,7 +411,7 @@
    "source": [
     "#in each group add all the values of each conditon\n",
     "Noinjury_means= (,)\n",
-    "Injruy_means= (,)\n",
+    "Injury_means= (,)\n",
     "Noinjury_rnai_means= (,)\n",
     "Noinjury_rnai_means= (,)\n",
     "\n",
