--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -160,10 +160,18 @@
    "outputs": [],
    "source": [
     "#Need to update open()\n",
-    "with open('data/TAR010a.h5', 'wb') as f:\n",
+    "'https://hearingbrain.org/tmp/Injury/01142022_Injury3.czi'\n",
+    "'https://hearingbrain.org/tmp/Injury/01142022_Injury5.czi'\n",
+    "'https://hearingbrain.org/tmp/InjuryRNAi/01142022NijARNAi_Injury1.czi'\n",
+    "'https://hearingbrain.org/tmp/InjuryRNAi/01142022NijARNAi_Injury3.czi'\n",
+    "'https://hearingbrain.org/tmp/NoInjury/01142022_NoInjury2.czi'\n",
+    "'https://hearingbrain.org/tmp/NoInjury/01142022_NoInjury3.czi'\n",
+    "'https://hearingbrain.org/tmp/NoInjuryRNAi/01142022NijARNAi_NoInjury1.czi'\n",
+    "'https://hearingbrain.org/tmp/NoInjuryRNAi/01142022NijARNAi_NoInjury4.czi'\n",
+    "with open('https://hearingbrain.org/tmp/NoInjuryRNAi/01142022NijARNAi_NoInjury4.czi', 'wb') as f:\n",
     "    c = pycurl.Curl()\n",
     "    #Need to Update website URL\n",
-    "    c.setopt(c.URL, 'https://hearingbrain.org/tmp/TAR010a.h5')\n",
+    "    c.setopt(c.URL, 'https://hearingbrain.org/tmp/NoInjuryRNAi/01142022NijARNAi_NoInjury4.czi')\n",
     "    c.setopt(c.WRITEDATA, f)\n",
     "    c.perform()\n",
     "    c.close()"
@@ -185,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = ('/Users/miramota/Desktop/IMGS/01142022_Injury5.czi')\n",
+    "path = ('https://hearingbrain.org/tmp/NoInjuryRNAi/01142022NijARNAi_NoInjury4.czi')\n",
     "img = czifile.imread(path)\n",
     "img = img[0,0,0,:,:,:,0]\n",
     "maximg = img.max(axis = 0)"
@@ -335,22 +343,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "699654c5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "        print(file)\n",
-    "        file = file.absolute()\n",
-    "        file = file.as_posix()\n",
-    "        threshold = calculate_threshold(file)\n",
-    "        no_injury.append(threshold)\n",
-    "        mean = statistics.mean(no_injury)\n",
-    "    print(mean)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "217e7b2c",
    "metadata": {},
    "outputs": [],
@@ -394,10 +386,12 @@
    "source": [
     "# for x in files: \n",
     "    get filename: save as string\n",
-    "    for filepath: save as string\n",
-    "    calculate_metrics(x) = values\n",
+    "for file in folder_path:\n",
+    "    filename = file.stem()\n",
     "    file = file.absolute()\n",
-    "    file = file.as_posis()"
+    "    file = file.as_posis()\n",
+    "    calculate_metrics(x) = values\n",
+    "    "
    ]
   },
   {
@@ -456,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
