added for loop for making dataframe with filename and values, also added new function to make max projection images

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -331,13 +331,30 @@
     "   mean_value = maximg[binary_mask].mean()\n",
     "   count = np.sum(binary_mask)\n",
     "   percentarea = (count / area) * 100\n",
-    "   metric = {'Mean Value': [mean_value], 'Percent Area': [percentarea]}\n",
+    "   metric = [mean_value, percentarea]\n",
     "   return metric\n",
     "\n",
     "#Applying the function\n",
     "\n",
     "calc = calculate_metrics(maxz, 19) \n",
     "print(calc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6b4a511",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_max_proj(path):\n",
+    "    #path = z.absolute()\n",
+    "    #path = file.as_posix()\n",
+    "    czi_img = AICSImage(path)\n",
+    "    czi_array = czi_img.data\n",
+    "    czi_array = czi_array[0,0,:,:,:,]\n",
+    "    maxz = czi_array.max(axis = 0)\n",
+    "    return maxz"
    ]
   },
   {
@@ -384,13 +401,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for x in files: \n",
-    "    get filename: save as string\n",
-    "for file in folder_path:\n",
-    "    filename = file.stem()\n",
-    "    file = file.absolute()\n",
-    "    file = file.as_posis()\n",
-    "    calculate_metrics(x) = values\n",
+    "column_names = ['Filename','Mean Value', 'Percent Area']\n",
+    "df = pd.DataFrame(columns= column_names)\n",
+    "for r in injury_rnai:\n",
+    "    filename = r.stem\n",
+    "    #r = r.absolute()\n",
+    "    #r = r.as_posix()\n",
+    "    max = get_max_proj(r)\n",
+    "    values = calculate_metrics(max,19) \n",
+    "    res_dict= {'Filename':filename, 'Mean Value': values[0], 'Percent Area': values[1]}\n",
+    "    df= df.append(res_dict, ignore_index=True)\n",
+    "    \n",
     "    "
    ]
   },
